--- a/index.html
+++ b/index.html
@@ -1,9 +1,57 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> </title>
+    <meta charset="utf-8">.
+    <meta name="description" content="Theraphy dogs">
+    <meta name="keywords" content="website">
+    <meta name="author" content="Ethar Banafa">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Service dogs VS Therapy dogs </title>
+    <link rel="stylesheet" herf="index.css">
+    <style> 
+     p {
+  background-color: lightpink;
+  width: 300px;
+  border: 15px solid black;
+  padding: 20px;
+  margin: 100px;
+  color: blue;
+}
+ img {
+  background-color: lightblue;
+  width: 300px;
+  border: 15px solid blue;
+  padding: 30px;
+  margin: 100px;
+ }
+     table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+  table {
+  background-color: lightblue;
+  width: 300px;
+  border: 15px solid blue;
+  margin: 100px;
+  }
+    </style>
     </head>
     <body>
-
+    <h1>The difference between service dogs and Therapy dogs</h1>
+    <img src="./therapy dogs.jpg" alt="Therapy dogs" style="width:300px;height:250px;">
+    <p>Service dogs are different than therapy dogs. Service dogs are trained to assist a single person with a specific disability. Therapy dogs, explains the Psychiatric Service Dog Partners, are trained to interact and assist many people–some who suffer from a wide range of emotional or physical disabilities and others who simply need encouraging company.</p>
+    <table id=students>
+    <tr>
+    <th>Firstname</th>
+    <th>Age</th>
+    </tr>
+    <tr>
+    <td>John</td>
+    <td>15</td>
+    </tr>
+    <tr>
+    <td>sam</td>
+    <td>16</td>
+    </tr>
     </body>
-</html>
+    </html>
